--- a/src/components/tools/tools.css
+++ b/src/components/tools/tools.css
@@ -96,7 +96,8 @@
   border-radius: 5px;
   -webkit-box-shadow: 0 0 2px #000;
   -moz-box-shadow: 0 0 2px #000;
-  box-shadow: 0 0 2px #000; }
+  box-shadow: 0 0 2px #000;
+  z-index: 999; }
   .validatorStatus:after, .validatorStatus:before {
     position: absolute;
     width: 0;
