--- a/src/components/tools/tools.scss
+++ b/src/components/tools/tools.scss
@@ -128,6 +128,7 @@
     -webkit-box-shadow: 0 0 2px #000;
     -moz-box-shadow: 0 0 2px #000;
     box-shadow: 0 0 2px #000;
+    z-index: 999;
 
     &:after,
     &:before {
